ajout logique