@@ -3,6 +3,7 @@ package server.db.data;
 import server.db.model.Model;
 import server.elements.interfaces.DataStorage;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.SQLException;
 import java.util.List;
 
@@ -11,10 +12,14 @@ public class DataFactory {
     public static void createDataInAppToDb(List<Class<? extends Model>> data) {
         for (Class<? extends Model> d : data) {
             try {
-                Model modelInstance = d.newInstance();
-                modelInstance.getInit();
+                Model modelInstance = d.getDeclaredConstructor().newInstance();
+                modelInstance.getAll();
             } catch (InstantiationException | IllegalAccessException | SQLException e) {
                 e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchMethodException e) {
+                throw new RuntimeException(e);
             }
         }
     }
